@@ -4,6 +4,7 @@
   * Implement all three encodings. Fix extended encoding calculation.
   * Support bar thickness/spacing for bar charts
   * (bug #16565 fixed) GChart now tells you when your chart is too big.
+  * Pushed some bar chart params logic down where it belongs
 
 == 0.3.0 (2007-12-24)
   
